# agent_enterprise_boilerplate

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: generate_env_example.py
skills/: executor_prompt.md  planner_prompt.md
src/agent_enterprise_boilerplate/: lifecycle.py  main.py
src/agent_enterprise_boilerplate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/agent_enterprise_boilerplate/agents/: __init__.py
src/agent_enterprise_boilerplate/config/: settings.py
src/agent_enterprise_boilerplate/container/: __init__.py  container.py
src/agent_enterprise_boilerplate/observability/: __init__.py  logger.py  metrics.py  tracer.py
src/agent_enterprise_boilerplate/runtime/: __init__.py  runner.py
src/agent_enterprise_boilerplate/tools/: __init__.py  registry.py  search_tool.py
src/agent_enterprise_boilerplate/workflows/: __init__.py  base.py  langgraph_workflow.py
src/agent_enterprise_boilerplate/workflows/nodes/: __init__.py  executor_node.py  planner_node.py
src/app/: __init__.py  lifecycle.py  main.py
src/app/agents/: base.py
src/app/api/: __init__.py  router.py
src/app/config/: enums.py  settings.py
src/app/container/: container.py
src/app/core/: __init__.py  banner.py  bootstrap.py  container.py  errors.py  lifecycle.py  logger.py
src/app/graph/: workflow.py
src/app/multi_agent_lab/: scout.py
src/app/nodes/: executor.py  planner.py
src/app/observability/: logger.py
src/app/resources/: __init__.py
src/app/runtime/: runner.py
src/app/schemas/: events.py  state.py
src/app/tools/: base.py  search_tool.py
src/app/workflows/: base.py
tests/: test_container.py  test_logger.py  test_main.py  test_runner.py  test_settings.py  test_workflow.py
