[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-enterprise-boilerplate"
version = "0.1.0"
description = "Enterprise-grade multi-agent orchestration boilerplate."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pydantic-settings>=2.2.1",
    "pyfiglet>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
project-bootstrap = "python_project.core.bootstrap:main"
run-app = "python_project.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=python_project --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests"]

[tool.coverage.run]
source = ["python_project"]
omit = ["tests/*", "**/__init__.py"]
